fix for filter menu on small screen sizes

--- a/src/_sass/tools/innovator-database/menu.scss
+++ b/src/_sass/tools/innovator-database/menu.scss
@@ -2,7 +2,6 @@
   position: fixed;
   top: 120px;
   width: 100%;
-  // height: 110px;
   z-index: 99;
   section {
     position: absolute;
@@ -134,6 +133,9 @@ body.condensed-header {
 @media all and (max-width: $screen-sm-max) {
   .innovatorDatabase_filters  {
     
+  }
+  .innovatorDatabase_menu section {
+    min-height: 0;
   }
 }
 
